--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://band.us/*"],
       "js": ["content.js"]
     }
   ],
